Adding documentation with swag, on expense endpoint
